# Materia-Lenguaje-de-Programacion

Task Tracker (GO)/: Como usar el Task Tracker (GO).txt  main.go  manager.go  storage.go  task.go  tasks.json  ui.go
TaskTrackerRust/task_tracker_rust/: Cargo.toml  tasks.json
TaskTrackerRust/task_tracker_rust/src/: main.rs  manager.rs  storage.rs  task.rs  ui.rs
sistema-microservicios/: README.md  docker-compose.yml
sistema-microservicios/auth-service/: crud.py  database.py  main.py  requirements.txt  schemas.py
sistema-microservicios/frontend/: index.html  package.json  vite.config.js
sistema-microservicios/frontend/src/: App.vue
sistema-microservicios/inventory-service/: Cargo.toml  Dockerfile
sistema-microservicios/inventory-service/src/: main.rs
sistema-microservicios/notifications-service/: Dockerfile  go.mod  main.go
sistema-microservicios/orders-service/: Dockerfile  pom.xml
sistema-microservicios/orders-service/src/main/java/com/microservicios/orders/: OrdersApplication.java
sistema-microservicios/payments-service/: index.js  package.json
sistema-microservicios/products-service/: Dockerfile  composer.json
sistema-microservicios/products-service/public/: index.php
